--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
-  "devDependencies": {
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
-    "typescript": "5.4.5"
+ "devDependencies": {
+  "eslint": "8.56.0",
+  "eslint-config-next": "14.1.0",
+  "typescript": "5.4.5",
+  "@types/react": "^18.2.0",
+  "@types/node": "^20.4.2"
+}
   }
 }
